[package]
name = "olin"
version = "0.1.0"
authors = ["Christine Dodrill <me@christine.website>"]
description = "A small runtime library to help out programs linked against CommonWA targeting Olin. This will only be useful on the wasm32-unknown-unknown target."
license = "MIT"
repository = "https://github.com/Xe/olin"
homepage = "https://github.com/Xe/olin"

[dependencies]
chrono = "0.4"
