[package]
name = "olin"
version = "0.1.0"
authors = ["Christine Dodrill <me@christine.website>"]
description = "A small runtime library to help out programs linked against CommonWA targeting Olin. This will only be useful on the wasm32-unknown-unknown target."
license = "MIT"
repository = "https://github.com/Xe/olin"
homepage = "https://github.com/Xe/olin"

[[bin]]
name = "shaman"
path = "src/bin/shaman.rs"

[[bin]]
name = "olinfetch"
path = "src/bin/olinfetch.rs"

[[bin]]
name = "log-env-message"
path = "src/bin/log-env-message.rs"

[dependencies]
chrono = "0.4"
http = "0.1"
httparse = "1.3.2"
wee_alloc = "0.4"
